RecipePage 	Added Search Entry 	Added Categories Collection View
RecipeDetails
	Added Image
	Added Details Frame

--- a/Xamarin/InstaPrep/InstaPrep/Views/RecipeDetailPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/RecipeDetailPage.xaml
@@ -2,13 +2,114 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="InstaPrep.Views.RecipeDetailPage"
-             Title="{Binding Title}">
+             xmlns:model="clr-namespace:InstaPrep.Models"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+             Title="{Binding Title}"
+             Shell.TabBarIsVisible="False"
+             xmlns:convert="clr-namespace:InstaPrep.Converters"
+             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
+             xmlns:local="clr-namespace:InstaPrep.ViewModels"
+             Shell.NavBarIsVisible="False"
+             x:DataType="local:RecipeDetailViewModel">
 
-    <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Text}" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description}" FontSize="Small"/>
-    </StackLayout>
-    
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <convert:RatingIconConverter x:Key="ratingIconConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <Grid>
+
+        <Grid BindingContext="{Binding SelectedRecipe}">
+
+            <Grid RowDefinitions="4*,6*" x:DataType="model:Recipe">
+
+                <Image Aspect="AspectFill" Source="{Binding ImageUrl}" />
+
+                <Frame HasShadow="False" Margin="0,-50,0,0" CornerRadius="50" Grid.Row="1"
+                   xct:ShadowEffect.Color="Black"
+                    xct:ShadowEffect.Opacity=".3"
+                    xct:ShadowEffect.OffsetX="0"
+                    xct:ShadowEffect.OffsetY="-20"
+                    xct:ShadowEffect.Radius="10"
+                    Padding="30">
+                    <StackLayout>
+
+                        <Label Text="{Binding Title}"
+                                   FontAttributes="Bold"
+                                   HorizontalTextAlignment="Start"
+                                    LineBreakMode="TailTruncation"
+                                    VerticalTextAlignment="Start"
+                                    MaxLines="2"
+                                    Style="{DynamicResource ListItemTextStyle}" 
+                                    FontSize="Large" />
+
+                        <Label Text="{Binding Title}"
+                                   HorizontalTextAlignment="Start"
+                                    LineBreakMode="TailTruncation"
+                                    VerticalTextAlignment="Start"
+                                    MaxLines="2"
+                                    Style="{DynamicResource ListItemTextStyle}" 
+                                    FontSize="Small" />
+
+                        <Grid ColumnDefinitions="*,*,*" Margin="0,20">
+
+                            <StackLayout>
+                                <Label Text="{Binding Duration}" 
+                                LineBreakMode="WordWrap"
+                                               MaxLines="2"
+                                               VerticalOptions="Fill"
+                                VerticalTextAlignment="Center"
+                                Style="{DynamicResource ListItemDetailTextStyle}"
+                                FontSize="13" />
+
+
+                            </StackLayout>
+                            <StackLayout Grid.Column="1">
+
+                                <ffimageloadingsvg:SvgCachedImage WidthRequest="30" HeightRequest="30" Source="{Binding Rating, Converter={StaticResource ratingIconConverter}}"/>
+
+                            </StackLayout>
+                            <StackLayout Grid.Column="2">
+
+
+                                <Label Text="{Binding Effort}"
+                                               HorizontalTextAlignment="End"
+                                LineBreakMode="NoWrap"
+                                VerticalOptions="Center"
+                                VerticalTextAlignment="Center"
+                                Style="{DynamicResource ListItemDetailTextStyle}"
+                                FontSize="13" />
+
+
+                            </StackLayout>
+
+
+                        </Grid>
+                    </StackLayout>
+
+                </Frame>
+
+            </Grid>
+
+        </Grid>
+
+        <StackLayout xct:ShadowEffect.Color="Black"
+                               xct:ShadowEffect.Opacity=".5"
+                                xct:ShadowEffect.OffsetY="5"
+                                    xct:ShadowEffect.Radius="10" IsClippedToBounds="False" HorizontalOptions="Start" Margin="30,50" WidthRequest="40" HeightRequest="40">
+
+            <ffimageloadingsvg:SvgCachedImage Opacity=".9" Source="previous-white.svg"/>
+
+            <StackLayout.GestureRecognizers>
+                <TapGestureRecognizer 
+                NumberOfTapsRequired="1"
+                Command="{Binding Source={RelativeSource AncestorType={x:Type local:RecipeDetailViewModel}}, Path=BackCommand}"		
+                CommandParameter="{Binding .}">
+                </TapGestureRecognizer>
+            </StackLayout.GestureRecognizers>
+        </StackLayout>
+
+    </Grid>
+
 </ContentPage>
