--- a/Xamarin/InstaPrep/InstaPrep/Views/RecipesPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/RecipesPage.xaml
@@ -18,28 +18,12 @@
         <ResourceDictionary>
             <convert:RatingIconConverter x:Key="ratingIconConverter" />
         </ResourceDictionary>
-
-        <Style TargetType="Grid">
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup x:Name="CommonStates">
-                        <VisualState x:Name="Normal" />
-                        <VisualState x:Name="Selected">
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor"
-                                        Value="Red" />
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
-        </Style>
     </ContentPage.Resources>
 
     <!-- Toolbar -->
-    <ContentPage.ToolbarItems>
+    <!--<ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding AddItemCommand}" />
-    </ContentPage.ToolbarItems>
+    </ContentPage.ToolbarItems>-->
 
     <Grid RowDefinitions="auto, auto, auto" Padding="10,10" x:DataType="local:RecipesViewModel">
 
@@ -72,12 +56,14 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid Padding="10" Margin="10" x:DataType="model:RecipeCategory">
-                        <Button Text="{Binding Name}">
+                        <Button Text="{Binding Name}" TextColor="Black">
                             <Button.Behaviors>
                                 <behaviors:SelectableButtonBehavorBehavior
                                     Command="{Binding BindingContext.CategoryChanged, Source={x:Reference RecipesListPage}}"
                                     SelectedIdentifier="{Binding BindingContext.SelectedCategory.Id, Source={x:Reference RecipesListPage}, Mode=TwoWay}"
                                     CurrentIdentifier="{Binding Id}"
+                                    SelectedColor="#FFCC28"
+                                    UnSelectedColor="White"
                                  />
 
                             </Button.Behaviors>
