--- a/Xamarin/InstaPrep/InstaPrep/Views/AboutPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/AboutPage.xaml
@@ -3,34 +3,56 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="InstaPrep.Views.AboutPage"
              xmlns:vm="clr-namespace:InstaPrep.ViewModels"
+             xmlns:renderers="clr-namespace:InstaPrep.Renderers"
+             Shell.NavBarIsVisible="False"
              Title="{Binding Title}">
     
     <ContentPage.BindingContext>
         <vm:AboutViewModel />
     </ContentPage.BindingContext>
-    
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <Color x:Key="Accent">#96d1ff</Color>
-        </ResourceDictionary>
-    </ContentPage.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
-                </ContentView>
-            </StackLayout>
+        <StackLayout>
+
+            <Image Source="adam.png" Aspect="AspectFill" VerticalOptions="Center" HeightRequest="250" />
+
         </StackLayout>
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
+                <!-- Title -->
+                <Label Text="Hi, I'm Adam" FontSize="Title"/>
+
+                <!-- Breif -->
+                <Label Text="I created this small app as part of a skills assessment for a Xamarin project, and it’s been a lot of fun. Below is a list of all of the platforms I’ve touched over the 15 years. " FontSize="16" Padding="0,0,0,0"/>
+
+                <!-- .Net Framework -->
+                <Label Text=".Net Framework" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+
+                <!-- Xamarin -->
+                <Label Text="Xamarin" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+
+                <Grid ColumnDefinitions="*,*">
+
+                    <StackLayout Grid.Column="0" Spacing="10">
+                        <!-- C# -->
+                        <Label Text=".Net Framework" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+                    </StackLayout>
+
+                    <StackLayout Grid.Column="1" Spacing="10">
+                        <!-- XAML -->
+                        <Label Text=".Net Framework" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+                    </StackLayout>
+
+                </Grid>
+
                 <Label FontSize="16" Padding="0,24,0,0">
                     <Label.FormattedText>
                         <FormattedString>
