--- a/Xamarin/InstaPrep/InstaPrep/Views/AboutPage.xaml
+++ b/Xamarin/InstaPrep/InstaPrep/Views/AboutPage.xaml
@@ -27,46 +27,70 @@
                 <Label Text="Hi, I'm Adam" FontSize="Title"/>
 
                 <!-- Breif -->
-                <Label Text="I created this small app as part of a skills assessment for a Xamarin project, and it’s been a lot of fun. Below is a list of all of the platforms I’ve touched over the 15 years. " FontSize="16" Padding="0,0,0,0"/>
+                <Label Text="I created this small app as part of a skills assessment for a Xamarin project, and it’s been a lot of fun. Below is a list of some of the platforms I’ve touched over the 15 years." FontSize="16" Padding="0,0,0,0"/>
+
+                <Grid Margin="0,20" ColumnDefinitions="*,*">
+
+                    <Button Grid.Column="0" Margin="0,10,0,0" Text="View Résumé"
+                        Command="{Binding OpenWebCommand}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+
+                    <Button Grid.Column="1" Margin="0,10,0,0" Text="Share Résumé"
+                        Command="{Binding OpenWebCommand}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+
+                </Grid>
+
 
                 <!-- .Net Framework -->
                 <Label Text=".Net Framework" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
-                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".95" />
 
                 <!-- Xamarin -->
                 <Label Text="Xamarin" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
-                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".75" />
 
                 <Grid ColumnDefinitions="*,*">
 
                     <StackLayout Grid.Column="0" Spacing="10">
                         <!-- C# -->
-                        <Label Text=".Net Framework" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
-                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+                        <Label Text="C#" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".9" />
                     </StackLayout>
 
                     <StackLayout Grid.Column="1" Spacing="10">
                         <!-- XAML -->
-                        <Label Text=".Net Framework" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
-                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".5" />
+                        <Label Text="XAML" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".8" />
                     </StackLayout>
 
                 </Grid>
 
-                <Label FontSize="16" Padding="0,24,0,0">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Learn more at "/>
-                                <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Button Margin="0,10,0,0" Text="Learn more"
-                        Command="{Binding OpenWebCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
+                <!-- Blazor -->
+                <Label Text="Blazor" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".6" />
+
+                <Grid ColumnDefinitions="*,*">
+
+                    <StackLayout Grid.Column="0" Spacing="10">
+                        <!-- SQL -->
+                        <Label Text="SQL" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".65" />
+                    </StackLayout>
+
+                    <StackLayout Grid.Column="1" Spacing="10">
+                        <!-- GraphQL -->
+                        <Label Text="GraphQL" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                        <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".55" />
+                    </StackLayout>
+
+                </Grid>
+
+                <!-- Docker -->
+                <Label Text="Docker" FontAttributes="Bold" FontSize="16" Padding="0,0,0,0"/>
+                <renderers:AmazingProgressBar ProgressColor="Blue" Progress=".4" />
             </StackLayout>
         </ScrollView>
     </Grid>
